Cambio al formato de la version y del nombre del archivo compilado.

--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 
-version = '1.16-0.0.1.0'
+version = '16-0.0.1.0'
 group = 'com.newwind.nwtweaks' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'nwtweaks'
+archivesBaseName = 'NWTweaks'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
